# probe-metacog

./: .gitignore  ANALYSIS_NOTES.md  CLASSIFY_README.md  UPDATE.md  analyze_new_approaches.py  analyze_results.py  cache_saes.py  cache_saes.sh  classify_responses.py  config.py  exp6_sae_analysis.ipynb  extract_concepts.py  grading.py  model_utils.py  pyproject.toml  results_analysis.ipynb  run_attribution_patching.py  run_exp5_selective.py  run_exp6_reflection.py  run_exp6_sae_trace.py  run_experiments.py  run_head_analysis.py  run_neurofeedback.py  run_sae_analysis.py  run_smoke_test.py  sae_utils.py  submit_attribution.sh  submit_attribution_27b.sh  submit_concepts.sh  submit_concepts_27b.sh  submit_exp5.sh  submit_exp5_27b.sh  submit_exp5_27b_t1.sh  submit_exp5_t1.sh  submit_exp6.sh  submit_exp6_27b.sh  submit_exp6_sae.sh  submit_exp6_sae_27b.sh  submit_experiments.sh  submit_experiments_27b.sh  (+9 more)
results/: calibration.json  cross_approach_analysis.json  exp1_full.json  exp1_full_calibrated.json  exp2_full.json  exp2_full_calibrated.json  exp3_full.json  exp4_full.json  exp5_full.json  exp5_smoke.json  head_patching_scores.json  smoke_test.json
results_27b/: exp1_smoke_calibrated.json  exp2_full_calibrated.json  exp3_full_calibrated.json  exp5_full.json  exp5_smoke_smoke2.json
results_27b_t1/: exp2_full_calibrated.json  exp3_full_calibrated.json  exp4_full_calibrated.json  exp5_full.json
results_t1/: exp1_full_calibrated.json  exp1_smoke_calibrated.json  exp2_full_calibrated.json  exp3_full_calibrated.json  exp4_full_calibrated.json  exp5_full.json
(+35 files in other folders)
