[project]
name = "probe-metacog"
version = "0.1.0"
description = "Probing metacognitive awareness in Gemma-3 IT models via concept vector injection"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5.0",
    "transformers>=4.50.0",
    "accelerate>=1.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "ipython",
]

[tool.uv]
# Pin the CUDA-enabled PyTorch wheel index
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
